--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -7,6 +6,8 @@
   <title>My World | Private Reflections</title>
   <script src="https://cdn.tailwindcss.com"></script>
   <script>
+    window.process = window.process || { env: { API_KEY: "" } };
+    
     tailwind.config = {
       darkMode: 'class',
       theme: {
@@ -37,13 +38,8 @@
       background-color: #050505;
       color: #f8fafc;
     }
-    .no-scrollbar::-webkit-scrollbar {
-      display: none;
-    }
-    .no-scrollbar {
-      -ms-overflow-style: none;
-      scrollbar-width: none;
-    }
+    .no-scrollbar::-webkit-scrollbar { display: none; }
+    .no-scrollbar { -ms-overflow-style: none; scrollbar-width: none; }
     .glass-effect {
       background: rgba(255, 255, 255, 0.75);
       backdrop-filter: blur(12px);
@@ -54,32 +50,28 @@
       background: rgba(10, 12, 16, 0.8);
       border-bottom: 1px solid rgba(255, 255, 255, 0.05);
     }
-    .premium-shadow {
-      box-shadow: 0 4px 20px -2px rgba(0, 0, 0, 0.05);
-    }
-    .card-transition {
-      transition: all 0.25s cubic-bezier(0.4, 0, 0.2, 1);
-    }
+    .premium-shadow { box-shadow: 0 4px 20px -2px rgba(0, 0, 0, 0.05); }
     @keyframes slideUpFade {
       from { opacity: 0; transform: translateY(10px); }
       to { opacity: 1; transform: translateY(0); }
     }
-    .animate-feed-item {
-      animation: slideUpFade 0.4s ease-out forwards;
-    }
+    .animate-feed-item { animation: slideUpFade 0.4s ease-out forwards; }
   </style>
 <script type="importmap">
 {
   "imports": {
-    "react/": "https://esm.sh/react@^19.2.4/",
     "react": "https://esm.sh/react@^19.2.4",
+    "react-dom/": "https://esm.sh/react-dom@^19.2.4/",
+    "react/": "https://esm.sh/react@^19.2.4/",
     "@google/genai": "https://esm.sh/@google/genai@^1.40.0",
-    "react-dom/": "https://esm.sh/react-dom@^19.2.4/"
+    "vite": "https://esm.sh/vite@^7.3.1",
+    "@vitejs/plugin-react": "https://esm.sh/@vitejs/plugin-react@^5.1.4"
   }
 }
 </script>
 </head>
 <body>
   <div id="root"></div>
+  <script type="module" src="/index.tsx"></script>
 </body>
 </html>
